--- a/TODO
+++ b/TODO
@@ -108,11 +108,14 @@ We could probably push this idea for noninterf x among S.
    because insert_event always introduces a fresh event, so
    the same event cannot be introduced from both sides of the proof.
    Would it be good to change that?
-   If I change it, do I need to count the probability of these
-   common Shoup events in G3 twice? If yes, that's less useful,
-   because I can do the proof without a common event in G3
-   by repeating the elimination of these events twice.
-
+   If I change it, it is enough to count the probability of these
+   common Shoup events in G3 once (see cryptoverif.tex, sect 2.7.4),
+   so I would get a better probability than by eliminating these
+   events on both sides of the proof.
+   I should be careful that the introduced Shoup events do not
+   occur in G1 and G2. However, I could reuse the same
+   events several times.
+      
    Also allow "query equiv ..." to prove an equivalence
    presented exactly as CryptoVerif accepts assumptions on
    cryptographic primitives.
