--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2288,7 +2288,7 @@ $\texttt{!}N$&$!^N$\\
 
 CryptoVerif was partly developed while the authors were at \'Ecole Normale Sup\'erieure, Paris.
 
-\bibliography{../../../../../dev/allbib/biblio}
+\bibliography{../../dev/allbib/biblio}
 \bibliographystyle{abbrv} %alpha
 
 \end{document}
