--- a/TODO
+++ b/TODO
@@ -1,12 +1,6 @@
 Allow insert find[unique], provided CryptoVerif manages to
 prove that the find is indeed unique.
 
-The improvements to ROM (H(..) = .. and H(..) = H(..)) could
-also apply to PRFs.
-We could also have PRFs with several arguments.
-We could add ROMs/PRFs with several results, returning a tuple of random
-values (though splitting a single random result works ok).
-
 The dependency information computed by DepAnal2 at the definition
 of a variable x and saying that a certain term M does not depend on a certain
 variable y could also be used when x[M1...Ml] is know to be defined
@@ -3466,3 +3460,11 @@ chosen in (Z/qZ)^*.
 in remove_assign, when a variable has several definitions that
 all use the same term, I could do as if there is only one definition.
 DONE 27/9/2018
+
+The improvements to ROM (H(..) = .. and H(..) = H(..)) could
+also apply to PRFs.
+We could also have PRFs with several arguments.
+DONE
+   We could add ROMs/PRFs with several results, returning a tuple of random
+values (though splitting a single random result works ok).
+ABANDONED
